--- a/ProyectoX_API/pom.xml
+++ b/ProyectoX_API/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.7</version>
+		<version>2.7.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>Grupo_7</groupId>
+	<groupId>DH.Integrador.Grupo6</groupId>
 	<artifactId>ProyectoX_API</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ProyectoX_API</name>
-	<description>Proyecto integrador Grupo 7</description>
+	<description>Proyecto Intregrador grupo 6</description>
 	<properties>
 		<java.version>19</java.version>
 	</properties>
