--- a/ProyectoX_API/src/main/resources/application.properties
+++ b/ProyectoX_API/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/proyectox
+spring.datasource.url=jdbc:h2:~/proyectoXApi
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create-drop
