--- a/ProyectoX_API/src/main/resources/application.properties
+++ b/ProyectoX_API/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/proyectoXApi
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/proyectox
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
