--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -17,6 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-native-axios": "^0.17.1",
+    "react-router": "^6.7.0",
+    "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
