--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^5.1.6",
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
