--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -9,12 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bcad1591/react-date-picker": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "bootstrap": "^5.2.3",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.6",
