--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bcad1591/react-date-picker": "^0.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.6",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
-    "react-datepicker": "^4.8.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-native-axios": "^0.17.1",
