--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -22,7 +22,8 @@
     "react-native-axios": "^0.17.1",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
