--- a/ProyectoX_API/src/main/resources/application.properties
+++ b/ProyectoX_API/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:digitalhouse.cluster-cnyqegjgetrv.us-east-2.rds.amazonaws.com}:3306/PI_db_GRUPO6
-spring.datasource.username=PI_db_GRUPO6
-spring.datasource.password=Awoo0Sig
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/proyectox
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
