--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -15,11 +15,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.6",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-advanced-datetimerange-picker": "^1.0.14",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-native": "^0.71.2",
     "react-native-axios": "^0.17.1",
+    "react-native-elements": "^3.4.3",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "styled-components": "^5.3.6",
