--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.6",
+    "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
