--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.1.6",
     "axios": "^1.3.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
