--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-advanced-datetimerange-picker": "^1.0.14",
+    "react-calendar": "^4.0.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
