--- a/ProyectoX/.gitignore
+++ b/ProyectoX/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+package-lock.json
+pnpm-lock.yaml
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
