--- a/ProyectoX/package.json
+++ b/ProyectoX/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.1.6",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-advanced-datetimerange-picker": "^1.0.14",
     "react-calendar": "^4.0.0",
