ajustada entidad cliente

--- a/ProyectoX_API/src/main/resources/application.properties
+++ b/ProyectoX_API/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:digitalhouse.cluster-cnyqegjgetr
 spring.datasource.username=PI_db_GRUPO6
 spring.datasource.password=Awoo0Sig
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 # jwt
